# trash_tower_defence

./: CMakeLists.txt  README.md  main.c  main.h
cmake/: FindSDL2_image.cmake  FindSDL2_ttf.cmake
resources/: map.txt
